bugfix: move marking not aligned on medium size

--- a/sass/_game.scss
+++ b/sass/_game.scss
@@ -86,6 +86,7 @@
       position: absolute;
       top: 50%;
       transform: translateY(-45%);
+      z-index: 1;
     }
   }
 
@@ -131,11 +132,11 @@
     }
 
     > .move-white .comment-small {
-      left: 0.2em;
+      left: 0.1em;
     }
 
     > .move-black .comment-small {
-      right: 0.2em;
+      right: 0.1em;
     }
   }
 }
@@ -166,11 +167,11 @@
       border-right: 1px solid $highlight_100;
 
       > #sel-move {
-        right: 50% !important;
+        left: 50% !important;
         max-width: 6.4em;
-        max-height: 1.6em;
+        max-height: 1.4em;
         object-fit: fill;
-        transform: translateX(50%) translateY(-50%) scale(1.35, 1);
+        transform: translateX(-50%) translateY(-55%) scale(0.9, 1);
       }
     }
   }
